WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15098
REGRESSION(
r25142
): Double Scroll Bars when opening up PDFs
https://bugs.webkit.org/show_bug.cgi?id=15098
Summary
REGRESSION(r25142): Double Scroll Bars when opening up PDFs
Neil Daniels
Reported
2007-08-27 18:09:19 PDT
When you go to
http://googleapp.ccsd.net/search?q=aup&btnG=Search&client=ccsd&proxystylesheet=ccsd&output=xml_no_dtd&site=CCSD
and click on a PDF file (the first one in the list will do), while on the latest nightly (
r25261
), you get double vertical scroll bars. One from the previous page, and the other (inside) one is for the PDF itself.
Attachments
screenshot of issue
(54.40 KB, image/png)
2007-08-27 18:10 PDT
,
Neil Daniels
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Neil Daniels
Comment 1
2007-08-27 18:10:02 PDT
Created
attachment 16139
[details]
screenshot of issue
Matt Lilek
Comment 2
2007-08-27 18:21:40 PDT
Confirmed with
r25262
. This regressed with <
http://trac.webkit.org/projects/webkit/changeset/25142
>.
Neil Daniels
Comment 3
2007-08-27 19:08:01 PDT
I doubt this is a site specific issue. This seems to happen on any page that links to a PDF. Such as a Google result page:
http://www.google.com/search?hl=en&q=filetype%3Apdf&btnG=Search
David Kilzer (:ddkilzer)
Comment 4
2007-08-27 23:38:56 PDT
<
rdar://problem/5442610
>
Adele Peterson
Comment 5
2007-08-29 11:23:38 PDT
working on this...
Adele Peterson
Comment 6
2007-08-29 15:12:10 PDT
Committed revision 25307
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug