        Reviewed by Darin.

Fix for http://bugs.webkit.org/show_bug.cgi?id=15098
        <rdar://problem/5440319> REGRESSION (9A530-9A534): Double scroll bar on pdfs

        * WebCoreSupport/WebFrameLoaderClient.mm: (WebFrameLoaderClient::makeDocumentView):
         Don't suppress scrollbars before the view creation if we're making the view for a non-html view

        * WebView/WebFrameViewInternal.h: Make _scrollView return a WebDynamicScrollBarsView since so many clients were relying on it being that type anyway.
        * WebView/WebFrameView.mm:
        (-[WebFrameView _setDocumentView:]):
        (-[WebFrameView _scrollView]):
        (-[WebFrameView setAllowsScrolling:]):
        (-[WebFrameView allowsScrolling]):
        * WebView/WebView.mm:
        (-[WebView setAlwaysShowVerticalScroller:]):
        (-[WebView alwaysShowVerticalScroller]):
        (-[WebView setAlwaysShowHorizontalScroller:]):
        (-[WebView alwaysShowHorizontalScroller]):



Canonical link: https://commits.webkit.org/19796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25307 268f45cc-cd09-0410-ab3c-d52691b4dbfc