WebKit/WebView/WebFrameViewInternal.h
@@ -28,6 +28,7 @@
 
 #import <WebKit/WebFrameView.h>
 
+@class WebDynamicScrollBarsView;
 @class WebView;
 
 @interface WebFrameView (WebInternal)
@@ -44,6 +45,6 @@
 + (NSMutableDictionary *)_viewTypesAllowImageTypeOmission:(BOOL)allowImageTypeOmission;
 + (Class)_viewClassForMIMEType:(NSString *)MIMEType;
 + (BOOL)_canShowMIMETypeAsHTML:(NSString *)MIMEType;
-- (NSScrollView *)_scrollView;
+- (WebDynamicScrollBarsView *)_scrollView;
 
 @end
